# tpp

./: .gitignore  README.md  candcsvmaker.py  config.yml  pyproject.toml  tpp_pipeline.py
infrastructure/: thorny_tpp_job_launcher.py
src/infrastructure/: README.md  __init__.py  config.py  database.py  file_management.py  launcher.py
src/search/: plotter.py  tpp_pipeline.py
tests/: test_auth.py  test_tpp-db.py
tpp/: __init__.py
tpp/data/: __init__.py  database.yml  globus.yml
tpp/infrastructure/: .config.py.swp  __init__.py  config.py  database.py  file_management.py  launcher.py
tpp/search/: candcsvmaker.py  tpp_pipeline.py
