[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "the_petabyte_project"
version = "0.0.1"
authors = [ { name="Sarah Burke-Spolaor", email="sarah.spolaor@mail.wvu.edu" },
	    { name="Reshma Anna-Thomas", email="" },
	    { name="Bikash Kharel", email="" },
	    { name="Jordan Stanley", email="" },
	    ]
description = "Infrastructure and pipeline package for The Petabyte Project."
readme = "README.md"
requires-python = ">3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "http://sarahspolaor.faculty.wvu.edu/"
"Issues" = "https://github.com/thepetabyteproject/tpp/issues"